--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,10 +1,19 @@
 imports:
-    - { resource: parameters.yml }
+    - { resource: parameters.yml}
     - { resource: security.yml }
+     #Services
+    - { resource: services/services.yml}
+    #translate
+    - { resource: i18n/a2lix.yml}
+      #Sonata
+    - { resource: sonata/sonata_media.yml}
+    - { resource: sonata/sonata_seo.yml}
+     #image croping && resizing
+    - { resource: image/liip_imagine.yml}
 
 framework:
     #esi:             ~
-    #translator:      { fallback: "%locale%" }
+    translator:      { fallback: "%locale%" }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -19,7 +28,6 @@ framework:
     trusted_hosts:   ~
     trusted_proxies: ~
     session:
-        # handler_id set to null will use default session handler from php.ini
         handler_id:  ~
     fragments:       ~
     http_method_override: true
@@ -52,13 +60,20 @@ doctrine:
         user:     "%database_user%"
         password: "%database_password%"
         charset:  UTF8
-        # if using pdo_sqlite as your database driver, add the path in parameters.yml
-        # e.g. database_path: "%kernel.root_dir%/data/data.db3"
-        # path:     "%database_path%"
-
+        types:
+            json: Sonata\Doctrine\Types\JsonType
+      
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
-        auto_mapping: true
+        entity_managers:
+            default:
+                auto_mapping: true
+                filters:
+                    oneLocale:
+                        class: A2lix\I18nDoctrineBundle\Doctrine\ORM\Filter\OneLocaleFilter
+                        enabled: true
+                mappings:
+                     FOSUserBundle: ~
 
 # Swiftmailer Configuration
 swiftmailer:
@@ -67,3 +82,35 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+    
+# FOS
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: Application\Sonata\UserBundle\Entity\User
+# Sonata Block
+sonata_block:
+    default_contexts: [cms]
+    blocks:
+        sonata.admin.block.admin_list:
+            contexts:   [admin]
+        sonata.admin.block.search_result:
+            contexts:   [admin]
+        sonata.block.service.text:
+        sonata.block.service.action:
+        sonata.block.service.rss:
+# Sonata Block
+sonata_admin:
+    title:      Sahadina Admin
+    title_logo: /bundles/sonataadmin/logo_title.png
+    templates:
+           #short_object_description: SahadinaRestaurantBundle:Admin:short-object-description.html.twig
+        
+    dashboard:
+        blocks:
+            # display a dashboard block
+            - { position: left, type: sonata.admin.block.admin_list }
+# Global params           
+parameters:
+    sahadina.default_city:  'marrakech'
+    limit_pagination_list: 3
